Work around Qt bug by making sure executeDelayedItemsLayout is called in viewportEvent, the bug caused crashes in QTreeView's with a QSortFilterProxyModel

BUG: 172198


svn path=/trunk/extragear/network/ktorrent/; revision=877351